DE-3070: Fix reviewdog command
The existing way would require each repo that uses it to have a specific `.reviewdog.yml` file.
This way, repos do not need to have that specific knowledge to import the workflow

--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -32,7 +32,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog -reporter="github-pr-review" -runners="flake8" -tee
+          flake8 . | reviewdog -reporter="github-pr-review" -f flake8 -name flake8 -level info  -tee
+
   check-format:
     name: Check formatting
     runs-on: ubuntu-latest
