--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -15,7 +15,7 @@ on:
       run_tests:
         required: false
         type: boolean
-        default: false
+        default: true
 jobs:
   lint:
     name: Run python linters
