DE-3314: Add debugging stuff

--- a/actions/deploy-task-script/action.yml
+++ b/actions/deploy-task-script/action.yml
@@ -41,6 +41,9 @@ runs:
         npm install -g yarn
         yarn install --frozen-lockfile --prod
         echo "::endgroup::"
+        pwd
+        ls -altr
+        cat package.json
         echo "::group::Build&Publish"
         yarn run publish
         echo "::endgroup::"
