--- a/actions/deploy-task-script/action.yml
+++ b/actions/deploy-task-script/action.yml
@@ -15,6 +15,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout action code
+      uses: actions/checkout@v2
     - name: Setup Node
       uses: actions/setup-node@v2
     - name: Update git credentials
