--- a/actions/deploy-task-script/action.yml
+++ b/actions/deploy-task-script/action.yml
@@ -14,6 +14,7 @@ inputs:
     description: "SSH Key for pulling images into the task-script image being published"
 runs:
   using: "docker"
+  image: "Dockerfile"
   args:
     - ${{ inputs.ssh_key }}
 # runs:
