--- a/actions/deploy-task-script/Dockerfile
+++ b/actions/deploy-task-script/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:16
 
-RUN mkdir -p /usr/abc_test/ && mkdir -p /root/.ssh/
+RUN mkdir -p /usr/abc_test/ && \
+    mkdir -p /root/.ssh/ && \
+    touch /root/.ssh/known_hosts && \
+    ssh-keyscan github.com >> /root/.ssh/known_hosts
+
 COPY package.json yarn.lock index.js entrypoint.sh /usr/abc_test/
 
 RUN chmod +x /usr/abc_test/entrypoint.sh
