add artifact stuff

--- a/actions/deploy-task-script/action.yml
+++ b/actions/deploy-task-script/action.yml
@@ -9,6 +9,10 @@ inputs:
     required: true
   ssh_key:
     description: "SSH Key for pulling images into the task-script image being published"
+  artifact_bucket:
+    required: true
+  artifact_prefix:
+    required: true
 runs:
   using: "docker"
   image: "Dockerfile"
