--- a/actions/deploy-task-script/action.yml
+++ b/actions/deploy-task-script/action.yml
@@ -9,10 +9,8 @@ inputs:
     required: true
   ssh_key:
     description: "SSH Key for pulling images into the task-script image being published"
-  artifact_bucket:
-    required: true
-  artifact_prefix:
-    required: true
+  # FIXME: what is the best strategy for these?  Force users to specify or rely on them being in the env?
+  # FIXME: I would prefer if they could be built into the action repo
 runs:
   using: "docker"
   image: "Dockerfile"
