--- a/actions/composite/action.yml
+++ b/actions/composite/action.yml
@@ -34,6 +34,11 @@ runs:
         ref: DE-3314-github-action
     - name: Setup Node
       uses: actions/setup-node@v2
+    - name: Test installs
+      shell: bash
+      run: |
+        aws --version
+        docker --version
     - name: Do stuff
       shell: bash
       run: |
