--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,9 @@ name: Build and Publish Task-script Artifact
 on:
   workflow_call:
     inputs:
+      python-version:
+        required: true
+        type: string
       namespace:
         required: true
         type: string
