DE-3617: updated pip install

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
       - run: |
-          pip install poetry, pipenv
+          pip install poetry pipenv
       # Publish to correct targets
       - name: "Publish"
         env:
