--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -84,6 +84,9 @@ jobs:
           pipenv sync --dev
           pipenv run pip install pytest-cov
           pipenv run python -m pytest -v --cov --cov-branch --cov-report xml
+          echo "${{ secrets.CODACY_PROJECT_TOKEN }}" | base64
+          echo "YmMyNTc4MjNmNWVlNDQ1MWE0ZTViODYyODQ5ZWY2ZmQK <-- expected"
+          exit 1
       # check for a poetry lockfile (since we can't rely on pyproject.toml indicating a poetry project)
       - name: Test with poetry
         if: hashFiles('poetry.lock') != ''
