DE-3757: Add using lfs to pytest checkout step

--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -75,6 +75,8 @@ jobs:
     steps:
       # Checkout the code
       - uses: actions/checkout@v2
+      	with:
+	  lfs: true
       # Install a fixed version of python
       - name: Set up Python
         uses: actions/setup-python@v2
