--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -95,7 +95,8 @@ jobs:
         if: hashFiles('poetry.lock') != ''
         run: |
           pip install poetry
-          poetry config repositories.di_pypi_virtual https://ts-jfrog-artifactory:${{secrets.ARTIFACTORY_DI_PYPI_PASSWORD}}@tetrascience.jfrog.io/artifactory/api/pypi/di-pypi-virtual/simple
+          poetry config repositories.di_pypi_virtual https://tetrascience.jfrog.io/artifactory/di-pypi-virtual/
+          poetry config http-basic.di_pypi_virtual ts-jfrog-artifactory $ {{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }} 
           poetry install
           poetry run pip install pytest-cov
           poetry run python -m pytest -v --cov --cov-branch --cov-report xml
