--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -96,7 +96,8 @@ jobs:
         run: |
           pip install poetry
           poetry config repositories.artifactory https://tetrascience.jfrog.io/artifactory/di-pypi-virtual/
-          export POETRY_HTTP_BASIC_ARTIFACTORY_USERNAME=ts-jfrog-artifactory && export POETRY_HTTP_BASIC_ARTIFACTORY_PASSWORD=${{secrets.ARTIFACTORY_DI_PYPI_PASSWORD}} 
+          export POETRY_HTTP_BASIC_ARTIFACTORY_USERNAME=ts-jfrog-artifactory 
+          export POETRY_HTTP_BASIC_ARTIFACTORY_PASSWORD=${{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }} 
           poetry install
           poetry run pip install pytest-cov
           poetry run python -m pytest -v --cov --cov-branch --cov-report xml
