--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -91,14 +91,15 @@ jobs:
           pipenv run pip install pytest-cov
           pipenv run python -m pytest -v --cov --cov-branch --cov-report xml
       # check for a poetry lockfile (since we can't rely on pyproject.toml indicating a poetry project)
-      - name: Test with poetry
-        if: hashFiles('poetry.lock') != ''
+      - name: Configure poetry
+        uses: Gr1N/setup-poetry@v7
+        if: hashFiles('poetry.lock') != '' 
         env:
-          POETRY_HTTP_BASIC_ARTIFACTORY_USERNAME: ts-jfrog-artifactory 
-          POETRY_HTTP_BASIC_ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }}
+          POETRY_HTTP_BASIC_ARTIFACTORY_USERNAME: ts-jfrog-artifactory
+          POETRY_HTTP_BASIC_ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }}     
+      - name: Test with poetry
+        if: hashFiles('poetry.lock') != ''        
         run: |
-          pip install poetry
-          poetry install
           poetry run pip install pytest-cov
           poetry run python -m pytest -v --cov --cov-branch --cov-report xml
       # no pipfile or poetry lockfile, so we'll just install pytest with pip and run that
