--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -100,6 +100,7 @@ jobs:
       - name: Test with poetry
         if: hashFiles('poetry.lock') != ''        
         run: |
+          poetry install
           poetry run pip install pytest-cov
           poetry run python -m pytest -v --cov --cov-branch --cov-report xml
       # no pipfile or poetry lockfile, so we'll just install pytest with pip and run that
