--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -95,7 +95,7 @@ jobs:
         if: hashFiles('poetry.lock') != ''        
         run: |
           pip install poetry
-          poetry config http-basic.artifactory ts-jfrog-artifactory ${{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }}
+          poetry config http-basic.artifactory ts-jfrog-artifactory 
           poetry install
           poetry run pip install pytest-cov
           poetry run python -m pytest -v --cov --cov-branch --cov-report xml
