--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -92,10 +92,13 @@ jobs:
           pipenv run python -m pytest -v --cov --cov-branch --cov-report xml
       # check for a poetry lockfile (since we can't rely on pyproject.toml indicating a poetry project)
       - name: Test with poetry
+        shell: bash
+        env: 
+          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_DI_PYPI_PASSWORD }}
         if: hashFiles('poetry.lock') != ''        
         run: |
           pip install poetry
-          poetry config http-basic.artifactory ts-jfrog-artifactory test123
+          poetry config http-basic.artifactory ts-jfrog-artifactory $ARTIFACTORY_PASSWORD
           echo "Runing poetry install"
           poetry install
           poetry run pip install pytest-cov
