DE-3768: updated python-version workflow-input

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,6 @@ on:
   workflow_call:
     inputs:
       python-version:
-        required: true
         type: string
         default: 3.7
       namespace:
@@ -36,7 +35,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ inputs.python-version }}
+          python-version: ${{ inputs.python-version || '3.7' }}
       - run: |
           pip install poetry pipenv
       # Publish to correct targets
