DE-3800: bl00ps

--- a/.github/workflows/python_code_quality.yml
+++ b/.github/workflows/python_code_quality.yml
@@ -24,7 +24,7 @@ jobs:
     name: Deprecation warnings for ts-sdk-python Context
     runs-on: ubuntu-latest
     steps:
-      run: |
+     - run: |
         echo 'ls -la'
         ls -la
         echo "PWD: ${PWD}"
