DE-3800: Address reviewer comments

--- a/.github/actions/deprecation-checker/action.yaml
+++ b/.github/actions/deprecation-checker/action.yaml
@@ -1,4 +1,4 @@
-name: "Deprecated API Scan"
+name: "Detect Deprecated APIs"
 description: "Scan for deprecated API calls"
 inputs:
   python-version:
